kubernetes/aks/system/vouch-proxy/base/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vouch-proxy
  namespace: vouch-proxy
  labels:
    app.kubernetes.io/name: vouch
    app.kubernetes.io/instance: vouch
  annotations:
    external-dns.alpha.kubernetes.io/target: inspection.alpha.canada.ca
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: nginx
    # Proxy buffer size set to 64k. Any value less than 64k will result in a 502 error.
    nginx.ingress.kubernetes.io/proxy-buffer-size: 64k
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - vouch.inspection.alpha.canada.ca
      secretName: vouch-proxy-https-cert
  rules:
    - host: vouch.inspection.alpha.canada.ca
      http:
        paths:
          - path: /
            backend:
              service:
                name: vouch
                port:
                  name: http
            pathType: Prefix
